--- a/Website-Project/index.html
+++ b/Website-Project/index.html
@@ -1,21 +1,28 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-</head>
-<na>
+  </head>
+  <na>
     <ul>
-        <li><a href="#">Home</a></li>
-        <li><a href="#">About</a></li>
-        <li><a href="#">Contact</a></li>
+      <li><a href="#">Home</a></li>
+      <li><a href="#">About</a></li>
+      <li><a href="#">Contact</a></li>
     </ul>
-</na>
-<body>
+  </na>
+  <body>
     <h1>Welcome to Our Website</h1>
-</body>
-<footer>
+ 
+    <div class="carousel-container">
+      <h2>Testimonials</h2>
+      <div class="carousel"></div>
+      <button class="nav-button prev"></button>
+      <button class="nav-button next"></button>
+    </div>
+  </body>
+  <footer>
     <p>&copy; 2025 My Website</p>
-</footer>
+  </footer>
 </html>
