Added Hero Section

--- a/Website-Project/index.html
+++ b/Website-Project/index.html
@@ -14,6 +14,15 @@
 </na>
 <body>
     <h1>Welcome to Our Website</h1>
+
+    <div class="hero-image">
+        <div class="hero-text">
+          <h2>This is the New Website</h2>
+          <p>Exploring new and unique coding actions based on MERN development</p>
+          <button>Dare to Go Down the Rabbit Hole</button>
+        </div>
+    </div>
+
 </body>
 <footer>
     <p>&copy; 2025 My Website</p>
