Added image to Hero Section

--- a/Website-Project/index.html
+++ b/Website-Project/index.html
@@ -1,30 +1,31 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-</head>
-<na>
+  </head>
+  <na>
     <ul>
-        <li><a href="#">Home</a></li>
-        <li><a href="#">About</a></li>
-        <li><a href="#">Contact</a></li>
+      <li><a href="#">Home</a></li>
+      <li><a href="#">About</a></li>
+      <li><a href="#">Contact</a></li>
     </ul>
-</na>
-<body>
+  </na>
+  <body>
     <h1>Welcome to Our Website</h1>
 
     <div class="hero-image">
-        <div class="hero-text">
-          <h2>This is the New Website</h2>
-          <p>Exploring new and unique coding actions based on MERN development</p>
-          <button>Dare to Go Down the Rabbit Hole</button>
-        </div>
+      <div class="hero-text">
+        <h2>This is the New Website</h2>
+        <p>Exploring new and unique coding actions based on MERN development</p>
+        <button>
+          <img src="Samurai4.jpg" /><br />Dare to Go Down the Rabbit Hole
+        </button>
+      </div>
     </div>
-
-</body>
-<footer>
+  </body>
+  <footer>
     <p>&copy; 2025 My Website</p>
-</footer>
+  </footer>
 </html>
