--- a/Website-Project/index.html
+++ b/Website-Project/index.html
@@ -16,6 +16,7 @@
     <h1>Welcome to Our Website</h1>
 
     <form>
+        <h1>Contacts</h1>
         <label for="fname">First name:</label><br>
         <input type="text" id="fname" name=""><br>
         <label for="lname">Last name:</label><br>
