Added Text for nav-buttons

--- a/Website-Project/index.html
+++ b/Website-Project/index.html
@@ -20,8 +20,8 @@
     <div class="carousel-container">
       <h2>Testimonials</h2>
       <div class="carousel"></div>
-      <button class="nav-button prev"></button>
-      <button class="nav-button next"></button>
+      <button class="nav-button prev">Previous</button>
+      <button class="nav-button next">Next</button>
     </div>
   </body>
   <footer>
