--- a/Website-Project/index.html
+++ b/Website-Project/index.html
@@ -8,10 +8,10 @@
     <title>Document</title>
   </head>
   <na>
-    <ul>
-      <li><a href="#">Home</a></li>
-      <li><a href="#">About</a></li>
-      <li><a href="#">Contact</a></li>
+    <ul class="nav-wrapper">
+        <li><a href="#">Home</a></li>
+        <li><a href="#">About</a></li>
+        <li><a href="#">Contact</a></li>
     </ul>
   </na>
   <body>
