added new main section to page

--- a/Website-Project/index.html
+++ b/Website-Project/index.html
@@ -27,6 +27,10 @@
       </div>
     </div>
 
+    <main>
+      <h1>GitHub Actions</h1>
+    </main>
+    
     <form>
         <h1>Submit Contacts Form</h1>
         <label for="fname">First name:</label><br>
