added <p> tag to <main> tag

--- a/Website-Project/index.html
+++ b/Website-Project/index.html
@@ -29,8 +29,9 @@
 
     <main>
       <h1>GitHub Actions</h1>
+      <p>Working on set up for Automated GH Actions</p>
     </main>
-    
+
     <form>
         <h1>Submit Contacts Form</h1>
         <label for="fname">First name:</label><br>
